# beladymem

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.d2
src/beladymem/: __init__.py  cli.py  gates.py  metrics.py  oracle.py  policies.py  report.py  score.py  synth.py  trace.py
src/beladymem/adapters/: __init__.py  jsonl.py  longmemeval.py
tests/: test_gates.py  test_honesty.py  test_metrics.py  test_oracle.py  test_score.py  test_synth_adapters_cli.py  test_trace.py
